--- a/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.scss
@@ -13,6 +13,14 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
+            .alcanzado-text {
+                margin-top: 4px;
+                font-size: 11px;
+                font-weight: 600;
+                color: #003c69;
+                text-align: center;
+                line-height: 1.2;
+            }
 
             .step-title {
                 margin: 16px 0;
@@ -51,6 +59,7 @@
                     align-items: center;
                     justify-content: center;
                 }
+
 
                 .step-separator {
                     height: 2px;
