--- a/src/app/modules/tracking/tracking-view/tracking-view.template.html
+++ b/src/app/modules/tracking/tracking-view/tracking-view.template.html
@@ -9,7 +9,7 @@
   <div class="stepper-progress" *ngIf="completedCount() > 0">
     {{completedCount()}} de {{totalCanonical()}} pasos
   </div>
-  <app-tracking-stepper-view [steps]="stepperSteps" [orderDetails]="invoice?.orderProducts"></app-tracking-stepper-view>
+  <app-tracking-stepper-view [steps]="stepperSteps" [orderDetails]="invoice?.orderProducts" [rawData]="invoice"></app-tracking-stepper-view>
 </div>
 
 <!-- Card: Resumen de tu compra -->
