--- a/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.scss
@@ -13,6 +13,29 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
+
+            .icon-wrapper {
+                position: relative;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .product-count-badge {
+                position: absolute;
+                top: -6px;
+                right: -6px;
+                background: #d32f2f;
+                color: #fff;
+                font-size: 11px;
+                line-height: 16px;
+                width: 16px;
+                height: 16px;
+                border-radius: 8px;
+                text-align: center;
+                font-weight: 600;
+                box-shadow: 0 0 0 2px #fff;
+            }
             .alcanzado-text {
                 margin-top: 4px;
                 font-size: 11px;
